Fix: fixed collapse navigation LI element width, no LI element is 100% in XS phones

--- a/resources/src/webpack/sass/4-layouts/_nav.scss
+++ b/resources/src/webpack/sass/4-layouts/_nav.scss
@@ -71,9 +71,18 @@
 
   .nav-item
   {
+
+    @include media-breakpoint-down(xs)
+    {
+      width: 100%;
+      margin-left: 0 !important; // Try to find other solution than !important
+      background-color: cyan; //Debug
+    }
+
+
     &.active
     {
-      background-color: cyan;
+      background-color: cyan; //Debug
     }
     .nav-link
     {
